@@ -1,3 +1,5 @@
+* Fix AtTimeZone mapping
+
 Version 0.2 - 2013-09-18
 * Fix usage mixture between Div operator and function
 * Add array support in operators
